--- a/lib/plausible_web/templates/site/settings.html.eex
+++ b/lib/plausible_web/templates/site/settings.html.eex
@@ -115,14 +115,12 @@
 </div>
 
 <div class="max-w-md mx-auto bg-white shadow-md rounded rounded-t-none border-t-2 border-indigo-lightest px-8 pt-6 pb-8 mt-10" id="email-reports">
-  <div>
-    <h2>Email reports</h2>
-  </div>
+  <h2>Email reports</h2>
 
   <div class="my-4 border-b border-grey-light"></div>
 
   <div class="my-8 flex items-center">
-    <%= if @weekly_report_changeset do %>
+    <%= if @weekly_report do %>
       <%= button(to: "/sites/#{@site.domain}/weekly-report/disable", method: :post, class: "border rounded-full border-grey flex items-center cursor-pointer w-8 bg-green justify-end") do %>
         <span class="rounded-full border w-4 h-4 border-grey shadow-inner bg-white shadow"></span>
       <% end %>
@@ -131,22 +129,28 @@
         <span class="rounded-full border w-4 h-4 border-grey shadow-inner bg-white shadow"></span>
       <% end %>
     <% end %>
-    <span class="ml-2">Receive a weekly email report every Monday</span>
+    <span class="ml-2">Send a weekly email report every Monday</span>
   </div>
-  <%= if @weekly_report_changeset do %>
+  <%= if @weekly_report do %>
     <div class="text-sm text-grey-darker mt-6">
-      <%= form_for @weekly_report_changeset, "/sites/#{@site.domain}/weekly-report", [class: "max-w-xs"], fn f -> %>
-        <%= label f, :email, "Email address", class: "block text-grey-darker text-sm font-bold mb-2" %>
-        <div class="flex">
-          <%= email_input f, :email, class: "transition bg-grey-lighter appearance-none border border-transparent rounded w-full p-2 text-grey-darker leading-normal appearance-none focus:outline-none focus:border-grey-light", style: "flex-grow: 2" %>
-          <%= submit "Update", class: "button rounded-l-none" %>
+      <h4 class="my-2">Weekly report recipients</h4>
+      <%= for recipient <- @weekly_report.recipients do %>
+        <div class="p-3 flex justify-between bg-grey-lighter rounded my-2 max-w-sm">
+          <span><svg class="feather mr-1" style="transform: translateY(0.05em)"><use xlink:href="#feather-mail" /></svg><%= recipient %></span>
+          <%= button("❌", to: "/sites/#{@site.domain}/weekly-report/recipients/#{recipient}", method: :delete) %>
+        </div>
+      <% end %>
+      <%= form_for @conn, "/sites/#{@site.domain}/weekly-report/recipients", fn f -> %>
+        <div class="flex justify-between my-2 max-w-sm">
+          <%= email_input f, :recipient, class: "transition bg-grey-lighter appearance-none border border-transparent rounded w-full p-2 text-grey-darker leading-normal appearance-none focus:outline-none focus:border-grey-light", style: "flex-grow: 2", placeholder: "recipient@example.com" %>
+          <%= submit "Add recipient", class: "button rounded-l-none whitespace-no-wrap" %>
         </div>
       <% end %>
     </div>
   <% end %>
-  <div class="my-4 border-b border-grey-light"></div>
+  <div class="my-8 border-b border-grey-light"></div>
   <div class="my-8 flex items-center">
-    <%= if @monthly_report_changeset do %>
+    <%= if @monthly_report do %>
       <%= button(to: "/sites/#{@site.domain}/monthly-report/disable", method: :post, class: "border rounded-full border-grey flex items-center cursor-pointer w-8 bg-green justify-end") do %>
         <span class="rounded-full border w-4 h-4 border-grey shadow-inner bg-white shadow"></span>
       <% end %>
@@ -155,15 +159,21 @@
         <span class="rounded-full border w-4 h-4 border-grey shadow-inner bg-white shadow"></span>
       <% end %>
     <% end %>
-    <span class="ml-2">Receive a monthly email report on 1st of the month</span>
+    <span class="ml-2">Send a monthly email report on 1st of the month</span>
   </div>
-  <%= if @monthly_report_changeset do %>
+  <%= if @monthly_report do %>
     <div class="text-sm text-grey-darker mt-6">
-      <%= form_for @monthly_report_changeset, "/sites/#{@site.domain}/monthly-report", [class: "max-w-xs"], fn f -> %>
-        <%= label f, :email, "Email address", class: "block text-grey-darker text-sm font-bold mb-2" %>
-        <div class="flex">
-          <%= email_input f, :email, class: "transition bg-grey-lighter appearance-none border border-transparent rounded w-full p-2 text-grey-darker leading-normal appearance-none focus:outline-none focus:border-grey-light", style: "flex-grow: 2" %>
-          <%= submit "Update", class: "button rounded-l-none" %>
+      <h4 class="my-2">Monthly report recipients</h4>
+      <%= for recipient <- @monthly_report.recipients do %>
+        <div class="p-3 flex justify-between bg-grey-lighter rounded my-2 max-w-sm">
+          <span><svg class="feather mr-1" style="transform: translateY(0.05em)"><use xlink:href="#feather-mail" /></svg><%= recipient %></span>
+          <%= button("❌", to: "/sites/#{@site.domain}/monthly-report/recipients/#{recipient}", method: :delete) %>
+        </div>
+      <% end %>
+      <%= form_for @conn, "/sites/#{@site.domain}/monthly-report/recipients", fn f -> %>
+        <div class="flex justify-between my-2 max-w-sm">
+          <%= email_input f, :recipient, class: "transition bg-grey-lighter appearance-none border border-transparent rounded w-full p-2 text-grey-darker leading-normal appearance-none focus:outline-none focus:border-grey-light", style: "flex-grow: 2", placeholder: "recipient@example.com" %>
+          <%= submit "Add recipient", class: "button rounded-l-none whitespace-no-wrap" %>
         </div>
       <% end %>
     </div>
