--- a/lib/plausible_web/templates/site/settings.html.eex
+++ b/lib/plausible_web/templates/site/settings.html.eex
@@ -1,6 +1,6 @@
 <div class="pt-24"></div>
 <div class="max-w-md mx-auto flex justify-between">
-  <a href="/<%= @site.domain %>"><h1>Settings for <%= @site.domain %></h1></a>
+  <a href="/<%= URI.encode_www_form(@site.domain) %>"><h1>Settings for <%= @site.domain %></h1></a>
 </div>
 <div class="max-w-md mx-auto bg-white shadow-md rounded rounded-t-none border-t-2 border-indigo-lightest px-8 pt-6 pb-8 mt-10">
   <div class="flex items-center justify-between">
@@ -9,7 +9,7 @@
 
   <div class="my-4 border-b border-grey-light"></div>
 
-  <%= form_for @changeset, "/#{@site.domain}/settings", [class: "max-w-xs"], fn f -> %>
+  <%= form_for @changeset, "/#{URI.encode_www_form(@site.domain)}/settings", [class: "max-w-xs"], fn f -> %>
     <div class="my-4">
       <%= label f, :domain, class: "block text-grey-darker text-sm font-bold mb-2" %>
       <%= text_input f, :domain, class: "transition bg-grey-lighter appearance-none border border-transparent rounded w-full p-2 text-grey-darker leading-normal appearance-none focus:outline-none focus:border-grey-light ", disabled: "disabled" %>
@@ -37,18 +37,18 @@
   <%= if @site.public do %>
       Stats for <%= @site.domain %> are currently <b>public</b>. Anyone with the following link can view the stats:
       <div class="relative text-sm mt-4">
-        <input type="text" id="public-link" value="https://plausible.io/<%= @site.domain  %>" class="transition bg-grey-lighter appearance-none border border-transparent rounded w-full p-2 pr-16 text-grey-darker appearance-none focus:outline-none focus:border-grey-light" />
+        <input type="text" id="public-link" value="https://plausible.io/<%= URI.encode_www_form(@site.domain)  %>" class="transition bg-grey-lighter appearance-none border border-transparent rounded w-full p-2 pr-16 text-grey-darker appearance-none focus:outline-none focus:border-grey-light" />
         <a onclick="var input = document.getElementById('public-link'); input.focus(); input.select(); document.execCommand('copy');" href="javascript:void(0)" class="absolute pin-r text-indigo-darker font-bold p-2">
           <svg class="feather-sm"><use xlink:href="#feather-copy" /></svg>
         </a>
       </div>
-    <%= button("Make stats private", to: "/sites/#{@site.domain}/make-private", method: "POST", class: "button mt-8") %>
+    <%= button("Make stats private", to: "/sites/#{URI.encode_www_form(@site.domain)}/make-private", method: "POST", class: "button mt-8") %>
   <% else %>
     <div class="text-grey-darker">
       Stats for <%= @site.domain %> are currently <b>private</b>. You are the only person who can see them.
       If you choose to make your stats public, anyone with the link will be able to view them.
     </div>
-    <%= button("Make stats public", to: "/sites/#{@site.domain}/make-public", method: "POST", class: "button mt-8") %>
+    <%= button("Make stats public", to: "/sites/#{URI.encode_www_form(@site.domain)}/make-public", method: "POST", class: "button mt-8") %>
   <% end %>
 
   <div class="mt-16">
@@ -67,14 +67,14 @@
         <button onclick="var input = document.getElementById('<%= link.slug %>'); input.focus(); input.select(); document.execCommand('copy');" href="javascript:void(0)" class="py-2 px-4 bg-grey-lighter text-indigo-darker rounded-none border-r border-grey-light">
           <svg class="feather-sm"><use xlink:href="#feather-copy" /></svg>
         </button>
-        <%= button(to: "/sites/#{@site.domain}/shared-links/#{link.slug}", method: :delete, class: "py-2 px-4 bg-grey-lighter text-red-dark rounded-l-none", data: [confirm: "Are you sure you want to delete this shared link? The stats will not be accessible with this link anymore."]) do %>
+        <%= button(to: "/sites/#{URI.encode_www_form(@site.domain)}/shared-links/#{link.slug}", method: :delete, class: "py-2 px-4 bg-grey-lighter text-red-dark rounded-l-none", data: [confirm: "Are you sure you want to delete this shared link? The stats will not be accessible with this link anymore."]) do %>
           <svg class="feather-sm"><use xlink:href="#feather-trash-2" /></svg>
         <% end %>
       </div>
     <% end %>
   </div>
 
-  <%= link("+ New link", to: "/sites/#{@site.domain}/shared-links/new", class: "button mt-4") %>
+  <%= link("+ New link", to: "/sites/#{URI.encode_www_form(@site.domain)}/shared-links/new", class: "button mt-4") %>
 </div>
 
 <div class="max-w-md mx-auto bg-white shadow-md rounded rounded-t-none border-t-2 border-indigo-lightest px-8 pt-6 pb-8 mt-10">
@@ -85,7 +85,7 @@
       <%= for goal <- @goals do %>
         <div class="border-b border-grey-light py-3 flex justify-between">
           <small class="font-bold"><%= goal_name(goal) %></small>
-          <%= button("❌", to: "/#{@site.domain}/goals/#{goal.id}", method: :delete, class: "text-sm", data: [confirm: "Are you sure you want to remove goal #{goal_name(goal)}? This will just affect the UI, all of your analytics data will stay intact."]) %>
+          <%= button("❌", to: "/#{URI.encode_www_form(@site.domain)}/goals/#{goal.id}", method: :delete, class: "text-sm", data: [confirm: "Are you sure you want to remove goal #{goal_name(goal)}? This will just affect the UI, all of your analytics data will stay intact."]) %>
         </div>
       <% end %>
     <% else %>
@@ -93,7 +93,7 @@
     <% end %>
   </div>
 
-  <%= link("+ Add goal", to: "/#{@site.domain}/goals/new", class: "button mt-6") %>
+  <%= link("+ Add goal", to: "/#{URI.encode_www_form(@site.domain)}/goals/new", class: "button mt-6") %>
 </div>
 
 <div class="max-w-md mx-auto bg-white shadow-md rounded rounded-t-none border-t-2 border-indigo-lightest px-8 pt-6 pb-8 mt-10" id="google-auth">
@@ -120,7 +120,7 @@
         </p>
       <% end %>
 
-      <%= form_for Plausible.Site.GoogleAuth.changeset(@site.google_auth), "/#{@site.domain}/settings/google", [class: "max-w-xs"], fn f -> %>
+      <%= form_for Plausible.Site.GoogleAuth.changeset(@site.google_auth), "/#{URI.encode_www_form(@site.domain)}/settings/google", [class: "max-w-xs"], fn f -> %>
         <div class="my-6">
           <div class="inline-block relative w-full">
             <%= select f, :property, @search_console_domains, prompt: "(Choose property)", class: "block appearance-none w-full bg-grey-lighter text-grey-darker cursor-pointer hover:border-grey p-2 pr-8 rounded leading-normal focus:outline-none" %>
@@ -148,11 +148,11 @@
 
   <div class="my-8 flex items-center">
     <%= if @weekly_report do %>
-      <%= button(to: "/sites/#{@site.domain}/weekly-report/disable", method: :post, class: "border rounded-full border-grey flex items-center cursor-pointer w-8 bg-green justify-end") do %>
+      <%= button(to: "/sites/#{URI.encode_www_form(@site.domain)}/weekly-report/disable", method: :post, class: "border rounded-full border-grey flex items-center cursor-pointer w-8 bg-green justify-end") do %>
         <span class="rounded-full border w-4 h-4 border-grey shadow-inner bg-white shadow"></span>
       <% end %>
     <% else %>
-      <%= button(to: "/sites/#{@site.domain}/weekly-report/enable", method: :post, class: "border rounded-full border-grey flex items-center cursor-pointer w-8 justify-start") do %>
+      <%= button(to: "/sites/#{URI.encode_www_form(@site.domain)}/weekly-report/enable", method: :post, class: "border rounded-full border-grey flex items-center cursor-pointer w-8 justify-start") do %>
         <span class="rounded-full border w-4 h-4 border-grey shadow-inner bg-white shadow"></span>
       <% end %>
     <% end %>
@@ -164,10 +164,10 @@
       <%= for recipient <- @weekly_report.recipients do %>
         <div class="p-3 flex justify-between bg-grey-lighter rounded my-2 max-w-sm">
           <span><svg class="feather mr-1" style="transform: translateY(0.05em)"><use xlink:href="#feather-mail" /></svg><%= recipient %></span>
-          <%= button("❌", to: "/sites/#{@site.domain}/weekly-report/recipients/#{recipient}", method: :delete) %>
+          <%= button("❌", to: "/sites/#{URI.encode_www_form(@site.domain)}/weekly-report/recipients/#{recipient}", method: :delete) %>
         </div>
       <% end %>
-      <%= form_for @conn, "/sites/#{@site.domain}/weekly-report/recipients", fn f -> %>
+      <%= form_for @conn, "/sites/#{URI.encode_www_form(@site.domain)}/weekly-report/recipients", fn f -> %>
         <div class="flex justify-between my-2 max-w-sm">
           <%= email_input f, :recipient, class: "transition bg-grey-lighter appearance-none border border-transparent rounded w-full p-2 text-grey-darker leading-normal appearance-none focus:outline-none focus:border-grey-light", style: "flex-grow: 2", placeholder: "recipient@example.com" %>
           <%= submit "Add recipient", class: "button rounded-l-none whitespace-no-wrap" %>
@@ -178,11 +178,11 @@
   <div class="my-8 border-b border-grey-light"></div>
   <div class="my-8 flex items-center">
     <%= if @monthly_report do %>
-      <%= button(to: "/sites/#{@site.domain}/monthly-report/disable", method: :post, class: "border rounded-full border-grey flex items-center cursor-pointer w-8 bg-green justify-end") do %>
+      <%= button(to: "/sites/#{URI.encode_www_form(@site.domain)}/monthly-report/disable", method: :post, class: "border rounded-full border-grey flex items-center cursor-pointer w-8 bg-green justify-end") do %>
         <span class="rounded-full border w-4 h-4 border-grey shadow-inner bg-white shadow"></span>
       <% end %>
     <% else %>
-      <%= button(to: "/sites/#{@site.domain}/monthly-report/enable", method: :post, class: "border rounded-full border-grey flex items-center cursor-pointer w-8 justify-start") do %>
+      <%= button(to: "/sites/#{URI.encode_www_form(@site.domain)}/monthly-report/enable", method: :post, class: "border rounded-full border-grey flex items-center cursor-pointer w-8 justify-start") do %>
         <span class="rounded-full border w-4 h-4 border-grey shadow-inner bg-white shadow"></span>
       <% end %>
     <% end %>
@@ -194,10 +194,10 @@
       <%= for recipient <- @monthly_report.recipients do %>
         <div class="p-3 flex justify-between bg-grey-lighter rounded my-2 max-w-sm">
           <span><svg class="feather mr-1" style="transform: translateY(0.05em)"><use xlink:href="#feather-mail" /></svg><%= recipient %></span>
-          <%= button("❌", to: "/sites/#{@site.domain}/monthly-report/recipients/#{recipient}", method: :delete) %>
+          <%= button("❌", to: "/sites/#{URI.encode_www_form(@site.domain)}/monthly-report/recipients/#{recipient}", method: :delete) %>
         </div>
       <% end %>
-      <%= form_for @conn, "/sites/#{@site.domain}/monthly-report/recipients", fn f -> %>
+      <%= form_for @conn, "/sites/#{URI.encode_www_form(@site.domain)}/monthly-report/recipients", fn f -> %>
         <div class="flex justify-between my-2 max-w-sm">
           <%= email_input f, :recipient, class: "transition bg-grey-lighter appearance-none border border-transparent rounded w-full p-2 text-grey-darker leading-normal appearance-none focus:outline-none focus:border-grey-light", style: "flex-grow: 2", placeholder: "recipient@example.com" %>
           <%= submit "Add recipient", class: "button rounded-l-none whitespace-no-wrap" %>
@@ -234,5 +234,5 @@
   <div class="my-4 border-b border-grey-light"></div>
 
   <p class="text-lg">Deleting the site removes all stats you've collected</p>
-  <%= link "Delete #{@site.domain}", to: "/#{@site.domain}", method: :delete, class: "button bg-red-dark mt-4", data: [confirm: "Deleting the site data cannot be reversed. Are you sure?"] %>
+  <%= link "Delete #{@site.domain}", to: "/#{URI.encode_www_form(@site.domain)}", method: :delete, class: "button bg-red-dark mt-4", data: [confirm: "Deleting the site data cannot be reversed. Are you sure?"] %>
 </div>
