Update script with plausible.js

--- a/lib/plausible_web/templates/layout/_tracking.html.eex
+++ b/lib/plausible_web/templates/layout/_tracking.html.eex
@@ -1,11 +1,4 @@
-<%= if Mix.env() == :prod && !@conn.assigns[:skip_plausible_tracking] do %>
-    <script>
-      (function (w,d,s,o,f,js,fjs) {
-      w[o] = w[o] || function () { (w[o].q = w[o].q || []).push(arguments) };
-      js = d.createElement(s), fjs = d.getElementsByTagName(s)[0];
-      js.id = o; js.src = f; js.async = 1; fjs.parentNode.insertBefore(js, fjs);
-      }(window, document, 'script', 'plausible', 'https://plausible.io/js/p.js'));
-
-      plausible('page')
-    </script>
+<%= if !@conn.assigns[:skip_plausible_tracking] do %>
+  <script async defer src="https://plausibe.io/js/plausible.js"></script>
+  <script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
 <% end %>
