--- a/lib/plausible_web/templates/layout/_tracking.html.eex
+++ b/lib/plausible_web/templates/layout/_tracking.html.eex
@@ -1,4 +1,4 @@
-<%= if !@conn.assigns[:skip_plausible_tracking] do %>
+<%= if Mix.env() == :prod && !@conn.assigns[:skip_plausible_tracking] do %>
   <script async defer src="https://plausible.io/js/plausible.js"></script>
   <script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
 <% end %>
