--- a/lib/plausible_web/templates/page/index.html.eex
+++ b/lib/plausible_web/templates/page/index.html.eex
@@ -351,7 +351,7 @@
     </div>
 
     <div class="text-center">
-      <%= link("Ask a question from the founder", to: "mailto:uku@plausible.io", class: "text-indigo") %>
+      <%= link("Ask a question to the founder", to: "mailto:uku@plausible.io", class: "text-indigo") %>
     </div>
   </div>
 </div>
