--- a/assets/css/modal.css
+++ b/assets/css/modal.css
@@ -7,11 +7,20 @@
 }
 
 .modal[aria-hidden="false"] .modal__overlay {
-  animation: mmfadeIn .2s cubic-bezier(0.0, 0.0, 0.2, 1);
+  animation: mmfadeIn .2s ease-in;
 }
 
 .modal[aria-hidden="true"] .modal__overlay {
-  animation: mmfadeOut .2s cubic-bezier(0.0, 0.0, 0.2, 1);
+  animation: mmfadeOut .2s ease-in;
+}
+
+.modal-enter {
+  opacity: 0;
+}
+
+.modal-enter-active {
+  opacity: 1;
+  transition: opacity 100ms ease-in;
 }
 
 .modal__overlay {
@@ -26,6 +35,17 @@
   overflow-y: auto;
 }
 
+.modal__loader {
+  margin: 300px auto 0 auto;
+  animation: loaderFadein .4s ease-in;
+}
+
+@keyframes loaderFadein {
+    0%   { opacity: 0; }
+    50%  { opacity: 0; }
+    100% { opacity: 1; }
+}
+
 .modal__container {
   background-color: #fff;
   padding: 1rem 2rem;
@@ -34,6 +54,7 @@
   margin: 50px auto;
   box-sizing: border-box;
   min-height: 509px;
+  transition: height 200ms ease-in;
 }
 
 .modal__header {
@@ -54,9 +75,7 @@
 .modal__close:before { content: "\2715"; }
 
 .modal__content {
-  margin-top: 2rem;
   margin-bottom: 2rem;
-  line-height: 1.5;
 }
 
 @keyframes mmfadeIn {
